--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,6 @@
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
 .user-name {
 
   padding: 0 !important ;
@@ -96,4 +99,74 @@
 
 .btn-primary:visited, .btn-danger:visited {
   color: #fff;
+}
+
+.features {
+
+  ul {
+
+    margin-left: 0;
+
+    padding-left: 15px;
+
+  }
+
+}
+
+.jumbotron {
+
+  text-align: center;
+
+  background-image: asset-url('meeting.png');
+
+  background-size: cover;
+
+  color: #fff;
+
+  font-family: 'Helvetica Neue' !important;
+
+  font-stretch: expanded;
+
+  padding-top: 25px;
+
+  padding-bottom: 25px;
+
+  margin-left: 15px;
+
+  margin-right: 15px;
+
+  text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
+
+  height: 400px;
+
+/*
+
+h2 {
+
+font-size: 35px !important;
+
+.lead {
+
+font-family: 'Helvetica Neue' !important;
+
+font-size: 30px !important;
+
+}
+
+} */
+
+}
+
+.no-left-padding {
+
+  padding-left: 0 !important;
+
+}
+
+.listing {
+
+  list-style: none;
+
+  padding-left: 0;
+
 }
